deployment/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
  name: db
  namespace: pos
spec:
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
  selector:
    app: db
