deployment/iotbox-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: iotbox
  name: iotbox
  namespace: pos
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8069
  selector:
    app: iotbox
